--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/react-router-dom": "^5.1.8",
     "@types/redux-thunk": "^2.1.0",
     "axios": "^0.21.1",
+    "mobx": "^6.5.0",
     "react": "^17.0.2",
     "react-content-loader": "^6.0.3",
     "react-dom": "^17.0.2",
