--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
     "@types/react-router-dom": "^5.1.8",
     "@types/redux-thunk": "^2.1.0",
     "axios": "^0.21.1",
+    "date-fns": "^2.28.0",
     "mobx": "^6.5.0",
     "react": "^17.0.2",
     "react-content-loader": "^6.0.3",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.14.0",
+    "react-player": "^2.10.1",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
