--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-content-loader": "^6.0.3",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.14.0",
+    "react-loader-spinner": "^5.1.5",
     "react-player": "^2.10.1",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
