--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "axios": "^0.21.1",
     "date-fns": "^2.28.0",
     "mobx": "^6.5.0",
+    "mobx-react": "^7.5.1",
     "react": "^17.0.2",
     "react-content-loader": "^6.0.3",
     "react-dom": "^17.0.2",
