--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "private": true,
   "homepage": "https://honeyurt.github.io/react-social-network",
   "dependencies": {
-    "@hookform/resolvers": "^2.8.0",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
@@ -21,19 +20,16 @@
     "mobx": "^6.5.0",
     "mobx-react": "^7.5.1",
     "react": "^17.0.2",
-    "react-content-loader": "^6.0.3",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.14.0",
     "react-loader-spinner": "^5.1.5",
-    "react-player": "^2.10.1",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "redux": "^4.1.1",
     "redux-thunk": "^2.3.0",
     "typescript": "^4.1.2",
-    "web-vitals": "^1.0.1",
-    "yup": "^0.32.9"
+    "web-vitals": "^1.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
