--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "social-network",
-  "version": "0.1.0",
+  "version": "0.2",
   "private": true,
+  "author": "Alexander Smirnov",
   "homepage": "https://honeyurt.github.io/react-social-network",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
@@ -12,22 +13,16 @@
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
-    "@types/react-redux": "^7.1.18",
     "@types/react-router-dom": "^5.1.8",
-    "@types/redux-thunk": "^2.1.0",
     "axios": "^0.21.1",
     "date-fns": "^2.28.0",
     "mobx": "^6.5.0",
     "mobx-react": "^7.5.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-hook-form": "^7.14.0",
     "react-loader-spinner": "^5.1.5",
-    "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
-    "redux": "^4.1.1",
-    "redux-thunk": "^2.3.0",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
   },
